tests/samples/negative/types/tuple_destructure_non_tuple.ax
module tuple_destructure_non_tuple;

fn main() -> i32 {
    let (a, b) = 1;
    return a;
}
